# pico_temp

./: CMakeLists.txt  test_temp.c
